--- a/index.html
+++ b/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="icon-bar">
+        <div class="input-box">
+          <img src="" alt="" class="logo" />
+          <select name="" id=""></select>
+          <input type="search" />
+          <p class="number"></p>
+          <p class="support"></p>
+        </div>
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </div>
+      <nav class="navigation">
+        <div class="button">
+          <img src="" alt="" />
+          <p>Select By Categories</p>
+        </div>
+        <ul class="navbar">
+          <li>Wooden</li>
+          <li>Linen</li>
+          <li>Linen</li>
+          <li>Linen</li>
+          <li>Linen</li>
+        </ul>
+      </nav>
+      <header>
+        <div class="essential">
+          <div class="essential-text"></div>
+          <img src="" alt="" />
+        </div>
+        <img src="" alt="" />
+      </header>
+
+      <div class="category-part">
+        <p class="browse-category">Browse By Category</p>
+        <div class="categories">
+          <div class="part">
+            <p></p>
+            <img src="" alt="" />
+          </div>
+          <div class="part">
+            <p></p>
+            <img src="" alt="" />
+          </div>
+          <div class="part">
+            <p></p>
+            <img src="" alt="" />
+          </div>
+          <div class="part">
+            <p></p>
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="product-part"></div>
+      <section class="contact">
+        <div class="expert">
+          <p></p>
+          <p></p>
+        </div>
+        <div class="form-section"></div>
+      </section>
+      <div class="copyright">
+        <p></p>
+        <div class="policy">
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
