--- a/index.html
+++ b/index.html
@@ -10,19 +10,33 @@
     <div class="container">
       <div class="icon-bar">
         <div class="input-box">
-          <img src="" alt="" class="logo" />
-          <select name="" id=""></select>
-          <input type="search" />
-          <p class="number"></p>
-          <p class="support"></p>
+          <img src="./img/logo (1).png" width="50px" alt="" class="logo" />
+          <select name="categories" id="categories">
+            <option value="All categoties">All Categories</option>
+            <option value="Wooden">Wooden</option>
+            <option value="Linen">Linen</option>
+            <option value="Bedroom">Bedroom</option>
+            <option value="Kitchen">Kitchen</option>
+          </select>
+          <div class="search-input">
+            <input type="text" placeholder="Enter a word" />
+            <img class="search-input__img" src="./img/magnifier.png" alt="" />
+          </div>
+
+          <div class="firm-info">
+            <p class="number">0 800 456 80 80</p>
+            <p class="support">Support 24/7</p>
+          </div>
         </div>
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
+        <div class="icons">
+          <img class="img1" src="./img/user.png" alt="" />
+          <img class="img2" src="./img/heart.png" alt="" />
+          <img class="img3" src="./img/shoppingCart.png" alt="" />
+        </div>
       </div>
       <nav class="navigation">
         <div class="button">
-          <img src="" alt="" />
+          <img src="./img/unordered-list.png" alt="" />
           <p>Select By Categories</p>
         </div>
         <ul class="navbar">
@@ -35,10 +49,15 @@
       </nav>
       <header>
         <div class="essential">
-          <div class="essential-text"></div>
-          <img src="" alt="" />
+          <div class="essential-text">
+            Furniture essentials to a functional home design
+          </div>
+          <div class="sofa"><img src="./img/sofa.png" alt="" /></div>
         </div>
-        <img src="" alt="" />
+        <div class="lightning">
+          <p class="light">Why is lightning is important in design</p>
+          <img src="./img/armchair.png" alt="" />
+        </div>
       </header>
 
       <div class="category-part">
