--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400;1,500;1,600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -64,20 +70,20 @@
         <p class="browse-category">Browse By Category</p>
         <div class="categories">
           <div class="part">
-            <p></p>
-            <img src="" alt="" />
+            <p>Living Room</p>
+            <img src="./img/living-room.jpg" alt="" />
           </div>
           <div class="part">
-            <p></p>
-            <img src="" alt="" />
+            <p>Kitchen</p>
+            <img src="./img/kitchen.jpg" alt="" />
           </div>
           <div class="part">
-            <p></p>
-            <img src="" alt="" />
+            <p>Bedroom</p>
+            <img src="./img/bedroom.jpg" alt="" />
           </div>
           <div class="part">
-            <p></p>
-            <img src="" alt="" />
+            <p>Accesories</p>
+            <img src="./img/accesories.png" alt="" />
           </div>
         </div>
       </div>
